correção links web

--- a/Q-Academico Web/pratica-qacademico.html
+++ b/Q-Academico Web/pratica-qacademico.html
@@ -88,7 +88,7 @@
                 <p>O Q-Acadêmico Web o aproxima ainda mais da sua instituição, dos seus colegas e dos seus aluno.</br>
                 É uma importante ferramenta que possibilitará a você, enquanto professor, um universo de informações muito grande, ao alcance de poucos clique.</p>
                 </div>
-            <p><strong>Qualidata Soluções em Informática</strong> <a href="www.qualidata.com.br"> www.qualidata.com.br </a> </p>
+            <p><strong>Qualidata Soluções em Informática</strong> <a href="http://www.qualidata.com.br/"> www.qualidata.com.br </a> </p>
             <!-- coluna inferior esquerda -->
 
         </div>
@@ -109,7 +109,7 @@
                 <img src="images/user (1).svg" alt="usuário">
             </div>
             <br>
-            <p>Download do <a href="www.algummanual.com.br">manual</a><strong> (PDF)</strong></p>
+            <p>Download do <a href="https://www.acad.cefetmg.br/qacademico/alunos/manual/manual_academico_web_Aluno.pdf">manual</a><strong> (PDF)</strong></p>
 
             <!-- coluna inferior direita -->
 
