--- a/Text Formatting/index.html
+++ b/Text Formatting/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="primeiro-texto">font-family, font-size (xx-large), color, text-shadow (a CSS3 feature)</div>
-    <br><br>
-    <div class="segundo-texto">font-family, color, font-variant (small caps), width, background-color, text-align (center in width)</div>
-    <br><br>
-    <div class="terceiro-texto">font-family, font-size (x-small), color, font-weight (bolder), font-style (italic), text-align (center)</div>
-    <br><br>
-    <div class="quarto-texto">font-family (downloaded Tangerine), font-size (x-large), color, text-align (right)</div>
+    <p class="primeiro-texto">font-family, font-size (xx-large), color, text-shadow (a CSS3 feature)</p>
+    <br>
+    <p class="segundo-texto">font-family, color, font-variant (small caps), width, background-color, text-align (center in width)</p>
+    <br>
+    <p class="terceiro-texto">font-family, font-size (x-small), color, font-weight (bolder), font-style (italic), text-align (center)</p>
+    <br>
+    <p class="quarto-texto">font-family (downloaded Tangerine), font-size (x-large), color, text-align (right)</p>
 </body>
 </html>
